finished my first ever website

--- a/index.html
+++ b/index.html
@@ -10,17 +10,45 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">Aronno's</span> World</h1>
+            <h1><span class="orange-highlight">Aronno's</span> World</h1>
             <h3>A High school Student</h3>
-            <p> I am a highschool student. Now i'm an SSC candidate. I'm in one class for ond and half years. So i've started learning web developing. I've started learning with HTML. Then I've learned CSS. So I ain't a professional web developer. I do it for fun. But if I learn et pirfectly. I can become professional.
+            <p> I am a high school student. Now i'm an SSC candidate. I'm in a single class for one and half years. So i've started learning web developing. I've started learning with HTML. Then I've learned CSS. So I ain't a professional web developer. I do it for fun. But if I learn it perfectly. I can become professional.  
             </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/aronno-bless-rebeiro-354237213/">HIRE ME</a>  
         </div>
         <div class="half-width">
             <img src="images/aronno.png" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/my-bg.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Big Dream</h1>
+            <h2>Become a web debeloper</h2>
+            <p>I already learned besic HTML and CSS. I can build a simple website. I can even teach someone how to make a semple website. My goal is to make more website and learn advance topic.</p>
+            <a class="link-button" target="_blank" href="https://www.instagram.com/_aronno_/">VISIT MY INSTAGRAM</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="baby" class="half-width single-experience">
+            <h1>Baby Web Developer</h1>
+            <h3 class="orange-highlight">2021-Present | Programming Hero Learner</h3>
+            <p>Now i'm a baby web developer. I've learned basic HTML and CSS. by using my skill and the help of Programming Hero I made this amyzing website. I wish i will do my best in my future.</p>
+        </div>
+        <div id="full-stack" class="half-width single-experience">
+            <h1>Full Stack Web Developer</h1>
+            <h3 class="orange-highlight">On Future | Pro Level Developer</h3>
+            <p>I will be the master of HTML, CSS and Javascript. I will know everything needed to make a website function, efficient. I won't stop with the web. I will be beyond with most popular Javascript framework called Vue JS. I will even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+    </section>
+    <footer>
+        <p>© Aronno Web Developer 2021, A personal website.</p>
+    </footer>
 </body>
 </html>
